--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <title>Check LSTM state</title>
+
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Yanone+Kaffeesatz" rel="stylesheet">
+    <link href="style_prefixed.css" rel="stylesheet">
 </head>
 <body>
 
+<header>
+    <h1>Краще зрозуміти класифікатор</h1>
+    <h2>На кожне слово класифікатор з <a href="https://github.com/texty/manipulative_news_methodology" target="_blank">проекту про маніпулятивні новини</a> дає свій внутрішній стан. Це вектор з 400 чисел. Ця візуалізація має допомогти побачити, на яких місцях в тексті класифікатор суттєво змінює стейт.</h2>
+</header>
 
+<main>
+    <nav>
+
+    </nav>
+    <article>
+        <svg id="text_line"></svg>
+    </article>
+</main>
+
+<footer>
+
+</footer>
+
+<script src="bundle.js" type="text/javascript"></script>
 
 </body>
 </html>
