added text spans

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Check LSTM state</title>
 
     <link href="https://fonts.googleapis.com/css?family=Inconsolata|Yanone+Kaffeesatz" rel="stylesheet">
-    <link href="style_prefixed.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
 
@@ -19,7 +19,7 @@
 
     </nav>
     <article>
-        <svg id="text_line"></svg>
+        <canvas id="text_line"></canvas>
     </article>
 </main>
 
